--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio web Cool</h1>
+    <h1>Sitio web profesional</h1>
     <p>Saludos people</p>
     <p>Cuentame que te pareció</p>
 </body>
